--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ allprojects {
 
 subprojects {
   apply plugin: 'java'
-  apply plugin: 'maven'
+  // apply plugin: 'maven'
   apply plugin: 'maven-publish'
   apply plugin: "idea"
   apply plugin: "eclipse"
