added more msgs

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
 }
 
 subprojects {
+  logger.error("also here")
   apply plugin: 'java'
   // apply plugin: 'maven'
   apply plugin: 'maven-publish'
