--- a/message_generation/build.gradle
+++ b/message_generation/build.gradle
@@ -34,7 +34,7 @@ dependencies {
   compile 'org.apache.commons:com.springsource.org.apache.commons.io:1.4.0'
   compile 'commons-pool:commons-pool:1.6'
   compile 'org.apache.commons:com.springsource.org.apache.commons.lang:2.4.0'
-  compile project(':gradle_plugins_new')
+  compile project(':gradle_plugins')
   testCompile 'junit:junit:4.8.2'
 }
 
